src/test/deca/context/invalid/homemade/print_void.deca
// Description :
// Trying to print void in main

class A {
    void x() {
    }
}

{
    A a = new A();
    println(a.x());
}